master - Passando parâmetros corretamente ao controller de cadastro de venda

--- a/Source/ProjetoCursoFeriasSMN/Views/Shared/_Layout.cshtml
+++ b/Source/ProjetoCursoFeriasSMN/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <script src="~/Lib/Javascript/materialize.min.js"></script>
     <!--plugin para mascarar campos-->
     <script src="~/Lib/Javascript/jquery.mask.js"></script>
-    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="~/Lib/Javascript/jquery.unobtrusive-ajax.min.js"></script>
 </head>
 <body>
     <!--Helper que renderiza o conteudo das views no corpo da página-->
